--- a/FitTinaV2/FitTinaV2.csproj
+++ b/FitTinaV2/FitTinaV2.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Workout\" />
+    <Folder Include="Views\User\" />
+  </ItemGroup>
 </Project>
