--- a/FitTinaTests/FitTinaTests.csproj
+++ b/FitTinaTests/FitTinaTests.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FitTinaV2\FitTinaV2.csproj" />
+  </ItemGroup>
 </Project>
