App is functional - submitting project

--- a/FitTinaV2/FitTinaV2.csproj
+++ b/FitTinaV2/FitTinaV2.csproj
@@ -18,5 +18,6 @@
     <Folder Include="Views\Workout\" />
     <Folder Include="Views\User\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
