--- a/FitTinaV2/appsettings.json
+++ b/FitTinaV2/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureSQLServerConnection": "Server=tcp:cs295-2020.database.windows.net,1433;Initial Catalog=Messages;Persist Security Info=False;User ID=jecca;Password=WebDev295;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "SQLiteConnection": "Data Source=FitTina.db"
+    "AzureSQLServerConnection": "Server=tcp:cs295-2020.database.windows.net,1433;Initial Catalog=FitTina;Persist Security Info=False;User ID=jecca;Password=WebDev295;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"SQLiteConnection": "Data Source=FitTina.db"
   }
 }
